--- a/kubernetes-manifests/AccountDBService/deployment.yaml
+++ b/kubernetes-manifests/AccountDBService/deployment.yaml
@@ -1,19 +1,4 @@
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  creationTimestamp: null
-  labels:
-    io.kompose.service: mongodata
-  name: mongodata
-spec:
-  accessModes:
-  - ReadWriteOnce
-  resources:
-    requests:
-      storage: 100Mi
-status: {}
----
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
@@ -24,6 +9,9 @@ metadata:
     io.kompose.service: mongodb
   name: mongodb
 spec:
+  selector:
+    matchLabels:
+      io.kompose.service: mongodb
   replicas: 1
   strategy:
     type: Recreate
