--- a/kubernetes-manifests/ApiGateway/ingress.yaml
+++ b/kubernetes-manifests/ApiGateway/ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: edge-ingress
@@ -8,27 +8,44 @@ spec:
   - http:
       paths:
       - path: /api/account
+        pathType: Prefix
         backend:
-          serviceName: account-service
-          servicePort: 80
+          service:
+            name: account-service
+            port: 
+              number: 80
       - path: /api/authentication
+        pathType: Prefix
         backend:
-          serviceName: authentication-service
-          servicePort: 80
+          service:
+            name: authentication-service
+            port:
+              number: 80
       - path: /api/product
+        pathType: Prefix
         backend:
-          serviceName: product-service
-          servicePort: 80
+          service:
+            name: product-service
+            port:
+              number: 80
       - path: /api/management
+        pathType: Prefix
         backend:
-          serviceName: management-service
-          servicePort: 80
+          service:
+            name: management-service
+            port:
+              number: 80
       - path: /api/payment
+        pathType: Prefix
         backend:
-          serviceName: payment-service
-          servicePort: 80
+          service:
+            name: payment-service
+            port:
+              number: 80
       - path: /
+        pathType: Prefix
         backend:
-          serviceName: frontend-service
-          servicePort: 80
-          
+          service:
+            name: frontend-service
+            port:
+              number: 80
