changed the cluster hostname to microk8s

--- a/kubernetes-manifests/AccountDBService/persistent-volume-claim.yaml
+++ b/kubernetes-manifests/AccountDBService/persistent-volume-claim.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: mongodata
 spec:
-  storageClassName: manual
+  storageClassName: microk8s-hostpath
   accessModes:
     - ReadWriteOnce
   resources:
